Updates title slide

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
               <a href="http://jamespascoe.github.io/accu2023">http://jamespascoe.github.io/accu2023</a><br>
               <a href="https://github.com/jamespascoe/accu2023-example-code.git">https://github.com/jamespascoe/accu2023-example-code.git</a>
+              <p>
+              <font style="color:yellow">ACCU Bristol and Bath Meetup Coordinator</font>
             </small>
         </section>
 
