--- a/index.html
+++ b/index.html
@@ -923,20 +923,395 @@ https://www.reddit.com/r/cpp/comments/10fkyru/are_boostcoroutine2_coroutines_sti
           </aside>
         </section>
 
+        <section>
+          <h2><a href="https://httpd.apache.org/docs/2.4/programs/ab.html">Apache Bench</a></h2>
+          <ul>
+            <span class="fragment"><li>'ab' is a tool for benchmarking HTTP servers</li></span>
+            <span class="fragment"><li>Mature implementation with extensive set of options</li></span>
+            <span class="fragment"><li>Number of concurrent requests is configurable</li></span>
+            <span class="fragment" style="color:yellow"><li>Measures 'requests per second' that can be serviced</li></span>
+          </ul>
+          <aside class="notes">
+          </aside>
+        </section>
 
-        <!--
-          Slide plan:
+        <section>
+          <h2><a href="">HTTP Server: Asynchronous</a></h2>
+            <pre class="stretch"><code class="c++" style="width:105%" data-trim data-line-numbers="">
+#include &ltboost/beast/core.hpp&gt
+#include &ltboost/beast/http.hpp&gt
+#include &ltboost/asio/strand.hpp&gt
 
-          Intro to Apache Bench
-          Asyncrhonous code
-          Stackful Coro's code
-          Awaitable Coro's code
-          Build/Run instructions
+#include &ltiostream&gt
+#include &ltthread&gt
+#include &ltformat&gt
 
-          Apache bench Results
+namespace beast = boost::beast;
+namespace http = beast::http;
+namespace asio = boost::asio;
+using tcp = boost::asio::ip::tcp;
 
-          Debugging tips (could be a concluion slide)
-        -->
+void error(beast::error_code ec, char const* what)
+{
+    std::cerr &lt&lt
+      std::format("Error: {} : {}\n", what, ec.message());
+    return;
+};
+
+// Handles an HTTP server connection
+class session : public std::enable_shared_from_this&ltsession&gt
+{
+    beast::tcp_stream stream_;
+    beast::flat_buffer buffer_;
+    http::request&lthttp::string_body&gt req_;
+
+public:
+    // Take ownership of the stream
+    session(
+        tcp::socket&& socket)
+        : stream_(std::move(socket))
+    {
+    }
+
+    // Start the asynchronous operation
+    void run()
+    {
+        asio::dispatch(stream_.get_executor(),
+                       beast::bind_front_handler(
+                       &session::do_read,
+                       shared_from_this()));
+    }
+
+    // Read an HTTP request
+    void do_read()
+    {
+        req_ = {};
+
+        // Set the timeout.
+        stream_.expires_after(std::chrono::seconds(30));
+
+        http::async_read(stream_, buffer_, req_,
+            beast::bind_front_handler(
+                &session::on_read,
+                shared_from_this()));
+    }
+
+    void on_read(
+        beast::error_code ec,
+        std::size_t bytes_transferred)
+    {
+        boost::ignore_unused(bytes_transferred);
+
+        // This means they closed the connection
+        if(ec == http::error::end_of_stream) {
+            stream_.socket().shutdown(tcp::socket::shutdown_send, ec);
+            return;
+        }
+
+        if(ec) return error(ec, "read");
+
+        // Send the response
+        auto handle_request = [this]() -&gt http::message_generator {
+          http::response&lthttp::string_body&gt res{
+            http::status::ok,
+            req_.version()
+          };
+
+          res.set(http::field::server, "Boost.Beast");
+          res.body() = "Hi ACCU 2023 from the Asynchronous Server!";
+          res.prepare_payload();
+          res.keep_alive(req_.keep_alive());
+          return res;
+        };
+
+        beast::async_write(
+            stream_,
+            handle_request(),
+            beast::bind_front_handler(
+                &session::on_write, shared_from_this()));
+    }
+
+    void on_write(
+        beast::error_code ec,
+        std::size_t bytes_transferred)
+    {
+        boost::ignore_unused(bytes_transferred);
+
+        if(ec) return error(ec, "write");
+
+        stream_.socket().shutdown(tcp::socket::shutdown_send, ec);
+        // Read another request
+        do_read();
+    }
+};
+
+// Accepts incoming connections and launches the sessions
+class listener : public std::enable_shared_from_this&ltlistener&gt
+{
+    asio::io_context& ioc_;
+    tcp::acceptor acceptor_;
+
+public:
+    listener(
+        asio::io_context& ioc,
+        tcp::endpoint endpoint)
+        : ioc_(ioc)
+        , acceptor_(asio::make_strand(ioc))
+    {
+        beast::error_code ec;
+
+        // Open the acceptor
+        acceptor_.open(endpoint.protocol(), ec);
+        if(ec) error(ec, "open");
+
+        // Allow address reuse
+        acceptor_.set_option(
+          asio::socket_base::reuse_address(true), ec
+        );
+        if(ec) error(ec, "set_option");
+
+        // Bind to the server address
+        acceptor_.bind(endpoint, ec);
+        if(ec) error(ec, "bind");
+
+        // Start listening for connections
+        acceptor_.listen(
+            asio::socket_base::max_listen_connections, ec);
+        if(ec) error(ec, "listen");
+    }
+
+    // Start accepting incoming connections
+    void run()
+    {
+        do_accept();
+    }
+
+private:
+    void do_accept()
+    {
+        // The new connection gets its own strand
+        acceptor_.async_accept(
+            asio::make_strand(ioc_),
+            beast::bind_front_handler(
+                &listener::on_accept,
+                shared_from_this()));
+    }
+
+    void on_accept(beast::error_code ec, tcp::socket socket)
+    {
+        if(ec) error(ec, "accept");
+
+        // Create the session and run it
+        std::make_shared&ltsession&gt(
+            std::move(socket))-&gtrun();
+
+        // Accept another connection
+        do_accept();
+    };
+};
+
+int main(int argc, char *argv[])
+{
+  if (argc != 4) {
+    std::cerr &lt&lt std::format(
+      "Usage: {} &ltip-address&gt &ltport&gt &ltthreads&gt\n"
+      "E.g.: {} 0.0.0.0 8080 2\n",
+      argv[0], argv[0]
+    );
+    return EXIT_FAILURE;
+  }
+
+  auto const address = asio::ip::make_address(argv[1]);
+  auto const port = static_cast&ltunsigned short&gt(std::atoi(argv[2]));
+  auto const num_threads = std::max&ltint&gt(1, std::atoi(argv[3]));
+
+  asio::io_context ioc{num_threads};
+
+  // Create and launch a listening port
+  std::make_shared&ltlistener&gt(ioc,
+    tcp::endpoint{address, port}
+  )-&gtrun();
+
+  // Run the IO service with the requested number of threads
+  std::vector&ltstd::thread&gt v(num_threads-1);
+  for (auto i = num_threads - 1; i; --i)
+    v.emplace_back([&ioc]{ ioc.run(); });
+
+  // Use the main thread as well
+  ioc.run();
+
+  return EXIT_SUCCESS;
+}
+            </code></pre>
+          <aside class="notes">
+          </aside>
+        </section>
+
+        <section data-menu-title="HTTP Server: Stackful">
+          <h2><a href="">HTTP Server: Stackful Coroutines</a></h2>
+            <pre class="stretch"><code class="c++" style="width:105%" data-trim data-line-numbers="">
+#include &ltboost/beast/core.hpp&gt
+#include &ltboost/beast/http.hpp&gt
+#include &ltboost/beast/version.hpp&gt
+#include &ltboost/asio/dispatch.hpp&gt
+#include &ltboost/asio/strand.hpp&gt
+#include &ltboost/asio/spawn.hpp&gt
+#include &ltboost/config.hpp&gt
+
+#include &ltiostream&gt
+#include &ltmemory&gt
+#include &ltthread&gt
+#include &ltvector&gt
+#include &ltformat&gt
+
+namespace beast = boost::beast;
+namespace http = beast::http;
+namespace asio = boost::asio;
+using tcp = boost::asio::ip::tcp;
+
+// Report an error
+void error(beast::error_code ec, char const* msg)
+{
+  std::cerr &lt&lt std::format("Error: {} - {}\n", msg, ec.message());
+}
+
+void do_session(
+    beast::tcp_stream& stream,
+    asio::yield_context yield)
+{
+    beast::flat_buffer buffer;
+    beast::error_code ec;
+
+    for(;;)
+    {
+        // Set a timeout (in case the client stops responding)
+        stream.expires_after(std::chrono::seconds(30));
+
+        // Read a request
+        http::request&lthttp::string_body&gt req;
+        http::async_read(stream, buffer, req, yield[ec]);
+
+        if(ec == http::error::end_of_stream) break;
+
+        if(ec) return error(ec, "read request");
+
+        // Handle the request
+        auto handle_request = [&req]() -&gt http::message_generator {
+          http::response&lthttp::string_body&gt res{
+            http::status::ok,
+            req.version()
+          };
+
+          res.set(http::field::server, "Beast");
+          res.body() =
+            "Hi ACCU 2023 from the Stackful Coroutine Server!";
+          res.prepare_payload();
+          return res;
+        };
+
+        // Send the response
+        beast::async_write(stream, handle_request(), yield[ec]);
+
+        if(ec) return error(ec, "write response");
+    }
+
+
+    stream.socket().shutdown(tcp::socket::shutdown_send, ec);
+}
+
+// Accepts incoming connections and launches the sessions
+void do_listen(
+    asio::io_context& ioc,
+    tcp::endpoint endpoint,
+    asio::yield_context yield)
+{
+    beast::error_code ec;
+
+    // Open the acceptor
+    tcp::acceptor acceptor(ioc);
+    acceptor.open(endpoint.protocol(), ec);
+    if(ec) return error(ec, "open");
+
+    // Allow address reuse
+    acceptor.set_option(asio::socket_base::reuse_address(true), ec);
+    if(ec) return error(ec, "set_option");
+
+    // Bind to the server address
+    acceptor.bind(endpoint, ec);
+    if(ec) return error(ec, "bind");
+
+    // Start listening for connections
+    acceptor.listen(asio::socket_base::max_listen_connections, ec);
+    if(ec) return error(ec, "listen");
+
+    for(;;)
+    {
+        tcp::socket socket(ioc);
+        acceptor.async_accept(socket, yield[ec]);
+        if(ec)
+            error(ec, "accept");
+        else
+            boost::asio::spawn(
+                acceptor.get_executor(),
+                std::bind(
+                    do_session,
+                    beast::tcp_stream(std::move(socket)),
+                    std::placeholders::_1));
+    }
+}
+
+int main(int argc, char *argv[])
+{
+  if (argc != 4) {
+    std::cerr &lt&lt std::format(
+      "Usage: {} &ltip-address&gt &ltport&gt &ltnum_threads&gt\n"
+      "E.g.: {} 0.0.0.0 8080 2\n",
+      argv[0], argv[0]
+    );
+    return EXIT_FAILURE;
+  }
+
+  auto const address = asio::ip::make_address(argv[1]);
+  auto const port = static_cast&ltunsigned short&gt(std::atoi(argv[2]));
+  auto const num_threads = std::max&ltint&gt(1, std::atoi(argv[3]));
+
+  asio::io_context ioc{num_threads};
+
+  // Spawn a stackful coroutine
+  boost::asio::spawn(ioc,
+      std::bind(
+          &do_listen,
+          std::ref(ioc),
+          tcp::endpoint{address, port},
+          std::placeholders::_1));
+
+  // Run the IO service with the requested number of threads
+  std::vector&ltstd::thread&gt v(num_threads-1);
+  for (auto i = num_threads - 1; i; --i)
+    v.emplace_back([&ioc]{ ioc.run(); });
+
+  // Use the main thread as well
+  ioc.run();
+
+  return EXIT_SUCCESS;
+}
+            </code></pre>
+          <aside class="notes">
+          </aside>
+        </section>
+
+        <section data-menu-title="HTTP Server: Awaitables">
+          <h2><a href="">HTTP Server: C++20 Coroutines</a></h2>
+            <pre class="stretch"><code class="c++" style="width:105%" data-trim data-line-numbers="">
+
+            </code></pre>
+          <aside class="notes">
+          </aside>
+        </section>
+
+        <!-- Build/Run instructions -->
+
+        <!-- Results -->
 
       </section>
 
@@ -944,6 +1319,22 @@ https://www.reddit.com/r/cpp/comments/10fkyru/are_boostcoroutine2_coroutines_sti
 
         <section data-background-video="media/BWT_Intermission.mp4" data-background-video-loop=true>
           <h1>Conclusions</h1>
+        </section>
+
+        <section>
+          <h2>Debugging Tips</h2>
+          <ul>
+            <span class="fragment"><li>Important to design asynchronous code</li></span>
+            <span class="fragment"><li>Be careful with object lifetimes</li></span>
+            <span class="fragment"><li>C++23 <a href="https://en.cppreference.com/w/cpp/header/stacktrace">stacktrace</a> can be very helpful:</li></span>
+            <ul>
+              <span class="fragment"><li>Good support in gcc 12.2</li></span>
+              <span class="fragment"><li>Configure with: <span style="color:yellow">--enable-libstdcxx-backtrace=yes</span></li></span>
+              <span class="fragment"><li>Compile with: <span style="color:yellow">-std=c++23 -lstdc++_libbacktrace</span></li></span>
+            </ul>
+          </ul>
+          <aside class="notes">
+          </aside>
         </section>
 
         <section>
