Add Lua Fiber Example Video

--- a/index.html
+++ b/index.html
@@ -673,13 +673,11 @@ void Connector::start_accept() {
           </aside>
         </section>
 
-        <!--
         <section data-menu-title="Lua Fiber Video"
                  data-state="hideControls",
-                 data-background-video="media/PingPong.mp4"
+                 data-background-video="media/lua-fiber-terminal-capture-1080.mp4"
                  id="video">
         </section>
-        -->
 
       </section>
       <section>
