Added Beast Example Terminal Capture

--- a/index.html
+++ b/index.html
@@ -1458,7 +1458,11 @@ int main(int argc, char* argv[])
           </aside>
         </section>
 
-        <!-- Build/Run instructions -->
+        <section data-menu-title="Web Server Example Video"
+                 data-state="hideControls",
+                 data-background-video="media/beast-example-terminal-capture-1080.mp4"
+                 id="video">
+        </section>
 
         <section data-menu-title="Performance: x86-64">
           <h3>Web Server Performance Comparison: x86-64</h3>
